--- a/scss/partials/_info-producto.scss
+++ b/scss/partials/_info-producto.scss
@@ -1,14 +1,14 @@
 .producto {
     display: block;
     flex-direction: column;
-    
+
     @include desktop {
         display: flex;
         flex-direction: row;
         margin-top: 80px;
         max-height: 500px;
         margin-bottom: 30px;
-       
+
     }
 
     &-carrusel {
@@ -34,23 +34,40 @@
     }
 
     &-info {
-        border: solid $colorturquesaoscuro;
-        border-width: 0.1px;
-        border-radius: 10px;
-        max-width: fit-content;
-        margin-top: 30px;
-        margin-bottom: 40px;
-        margin: 0;
+        margin: 20px;
 
-        @include desktop {
-            border: solid $colorturquesaoscuro;
-            border-width: 0.1px;
+        .texto {
+            &-precio {
+                font-size: 28px;
+                color: $colornaranja;
+            }
+
+            &-iva {
+                font-size: 12px;
+            }
+
+            &-titulo-seleccion {
+                font-size: 20px;
+                font-weight: 600;
+            }
+        }
+
+        &-pagar {
             border-radius: 10px;
+            border: $colorazul solid 1px;
+            padding: 15px;
+
+            &-precio {
+                font-size: 28px;
+                color: $colornaranja;
+            }
+
+            &-texto {
+                font-size: 12px;
         }
 
         h2 {
-            padding-top: 26px;
-            text-align: center;
+            text-align: start;
             color: $colorazul;
             font-weight: 600;
         }
@@ -66,6 +83,26 @@
 
         }
 
+        &-seleccion {
+            display: flex;
+
+            &-texto {
+                font-size: 13px;
+                font-weight: 600;
+                text-align: center;
+                padding-top: 5px;
+            }
+
+            &-imagen {
+                img {
+                    border-radius: 10px;
+                    max-height: fit-content;
+                    max-width: 100px;
+
+                }
+            }
+        }
+
         .form-select {
             font-size: 12px;
             margin: 30px 0 30px 0;
@@ -77,29 +114,29 @@
             width: 30%;
             margin: 30px auto 0 auto;
 
-            .input-number {
-                display: flex;
-                text-align: center;
-                font-size: 12px;
-                font-weight: 700;
-            }
+            // .input-number {
+            //     display: flex;
+            //     text-align: center;
+            //     font-size: 12px;
+            //     font-weight: 700;
+            // }
 
-            &-minus {
-                display: flex;
-                align-items: center;
-                padding: 6px 14px 6px 14px;
-            }
+            // &-minus {
+            //     display: flex;
+            //     align-items: center;
+            //     padding: 6px 14px 6px 14px;
+            // }
 
-            .btn-number {
-                font-size: 12px;
-                font-weight: 600;
-            }
+            // .btn-number {
+            //     font-size: 12px;
+            //     font-weight: 600;
+            // }
         }
 
         &-botonchip {
             display: flex;
             justify-content: center;
-            margin-top: 40px;
+            margin-top: 25px;
 
             &-comprar {
                 margin-top: -10px;
@@ -110,19 +147,19 @@
                 border-color: transparent;
                 border-radius: 25px;
                 background-color: $colornaranja;
-                font-weight: 600;
+                font-weight: 400;
                 box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.1), 0 4px 6px 0 rgba(0, 0, 0, 0.10);
-
             }
+
         }
 
         .liea-horizontal {
-            margin: 30px;
+            // margin: 30px;
         }
     }
 
 }
 
-.footer-info-producto{
-    position: absolute; bottom: 0;
-}
+// .footer-info-producto{
+//     position: absolute; bottom: 0;
+// }
