--- a/scss/partials/_navegador.scss
+++ b/scss/partials/_navegador.scss
@@ -2,8 +2,8 @@
     background-color: $colorazul;
     display: flex;
     justify-content: space-between;
-    padding-bottom: 10px;
-    padding-top: 8px;
+    
+    padding: 15px;
     align-items: center;
 
     @include desktop {
@@ -20,6 +20,7 @@
         justify-content: start;
 
         @include desktop {
+            margin-left: 20px;
             display: flex;
             justify-content: flex-start;
         }
@@ -38,6 +39,7 @@
 
     &-menu {
         display: flex;
+        padding-top: 7px;
 
         &:nth-child(1) img {
             width: 35px;
@@ -180,14 +182,12 @@
 
         &-busqueda {
             display: block;
-            width: 1200px;
-            height: 100%;
             background-color: $colorazul;
             border-color: #EAEBEB;
-            padding: 5px 0 10px 10px;
+            padding: 0 0 10px 10px;
             
             &-imagen{
-                width: 30%;
+                width: 98%;
                 img{
                     display: flex;
                 }
@@ -208,6 +208,7 @@
             justify-content: end;
             flex-direction: row;
             height: auto;
+            margin-right: 50px;
 
             @include desktop {
                 display: flex;
